--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <meta name="description" content="Imagine waking to a world where every last human has been mysteriously turned to stone...">
-  <meta name="author" content="dr-stone">
-  <meta property="og:title" content="Dr. STONE" />
-  <meta property="og:site_name" content="Dr. STONE Archives"/>
-  <meta property="og:url" content="https://dr-stone.github.io"/>
-  <meta property="og:description" content="Imagine waking to a world where every last human has been mysteriously turned to stone..."/>
+  <meta name="description" content="Unlike many schools, attending Hyakkaou Private Academy prepares students for their time in the real world. Since many of the students are the children of the richest people in the world, the academy has its quirks that separate it from all the others. By day, it is a normal school, educating its pupils in history, languages, and the like. But at night, it turns into a gambling den, educating them in the art of dealing with money and manipulating people. Money is power; those who come out on top in the games stand at the top of the school.
+
+Yumeko Jabami, a seemingly naive and beautiful transfer student, is ready to try her hand at Hyakkaou's special curriculum. Unlike the rest, she doesn't play to win, but for the thrill of the gamble, and her borderline insane way of gambling might just bring too many new cards to the table.">
+  <meta name="author" content="KakeguruiXX">
+  <meta property="og:title" content="Kakegurui" />
+  <meta property="og:site_name" content="Kakegurui Archives"/>
+  <meta property="og:url" content="https://KakeguruiXX.github.io"/>
+  <meta property="og:description" content="Unlike many schools, attending Hyakkaou Private Academy prepares students for their time in the real world. Since many of the students are the children of the richest people in the world, the academy has its quirks that separate it from all the others. By day, it is a normal school, educating its pupils in history, languages, and the like. But at night, it turns into a gambling den, educating them in the art of dealing with money and manipulating people. Money is power; those who come out on top in the games stand at the top of the school.
+
+Yumeko Jabami, a seemingly naive and beautiful transfer student, is ready to try her hand at Hyakkaou's special curriculum. Unlike the rest, she doesn't play to win, but for the thrill of the gamble, and her borderline insane way of gambling might just bring too many new cards to the table."/>
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/assets/img/cover.jpg" />
   <meta property="og:image:width" content="482" />
   <meta property="og:image:height" content="617" />
 
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/apple-touch-icon-72x72.png" />
@@ -25,7 +29,7 @@
   <link rel="apple-touch-icon" sizes="120x120" href="/assets/images/apple-touch-icon-120x120.png" />
   <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/apple-touch-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/apple-touch-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon-180x180.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon-180x180.png" /> -->
 
     <title>{{ page.title }}</title>
     <!-- <link rel="stylesheet" type="text/css" href="/assets/css/styles.css"> -->
