--- a/_layouts/manga.html
+++ b/_layouts/manga.html
@@ -45,7 +45,7 @@
   <meta property="og:image:width" content="200" />
   <meta property="og:image:height" content="300" />
 
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/apple-touch-icon-72x72.png" />
@@ -54,10 +54,10 @@
   <link rel="apple-touch-icon" sizes="120x120" href="/assets/images/apple-touch-icon-120x120.png" />
   <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/apple-touch-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/apple-touch-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon-180x180.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon-180x180.png" /> -->
 
     <title>Chapter {{pagetitle}}: {{ page.name }}</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/assets/css/styles.css"> -->
     <link rel="stylesheet" type="text/css" href="/assets/css/default.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/bookblock.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/manga.css" />
