--- a/_layouts/manga.html
+++ b/_layouts/manga.html
@@ -41,7 +41,7 @@
   <meta property="og:url" content="https://KakeguruiXX.github.io"/>
   <!-- <meta property="og:description" content="Chapter {{pagetitle}}: {{ page.name }}"/> -->
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/{{page.collection}}/{{filename}}/01.jpg" />
+  <meta property="og:image" content="/assets/{{page.collection}}/{{filename}}/001.png" />
   <meta property="og:image:width" content="200" />
   <meta property="og:image:height" content="300" />
 
