--- a/_layouts/default-twin.html
+++ b/_layouts/default-twin.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <meta name="description" content="Unlike many schools, attending Hyakkaou Private Academy prepares students for their time in the real world. Since many of the students are the children of the richest people in the world, the academy has its quirks that separate it from all the others. By day, it is a normal school, educating its pupils in history, languages, and the like. But at night, it turns into a gambling den, educating them in the art of dealing with money and manipulating people. Money is power; those who come out on top in the games stand at the top of the school.
-
-Yumeko Jabami, a seemingly naive and beautiful transfer student, is ready to try her hand at Hyakkaou's special curriculum. Unlike the rest, she doesn't play to win, but for the thrill of the gamble, and her borderline insane way of gambling might just bring too many new cards to the table.">
+  <meta name="description" content="It's a year before Yumeko transferred to Hyakkaou Academy. Saotome Mary, a young girl who was born into a very ordinary family, passed her transfer examinations, and has started to attend Hyakkaou. However, the school she expected to attend has a crazy law, the Baptism of Gambling. Paired with Yumeko as her 'twin,' the curtain opens on Mary's gambling mania!">
   <meta name="author" content="KakeguruiXX">
-  <meta property="og:title" content="Kakegurui" />
+  <meta property="og:title" content="Kakegurui Twin" />
   <meta property="og:site_name" content="Kakegurui Twin Archives"/>
   <meta property="og:url" content="https://KakeguruiXX.github.io/twin"/>
-  <meta property="og:description" content="After losing her hard-earned profits to student council member Aoi Mibuomi, a penniless Mary is given a chance to take it all back on just one condition: She must team up with Aoi to oust the student council president! But in order to do so, she needs to first prove her skills in one of the academy's most popular events-the Coupling Party! Will Mary be able to use her gambling prowess to survive this dirty game of cupid?"/>
+  <meta property="og:description" content="It's a year before Yumeko transferred to Hyakkaou Academy. Saotome Mary, a young girl who was born into a very ordinary family, passed her transfer examinations, and has started to attend Hyakkaou. However, the school she expected to attend has a crazy law, the Baptism of Gambling. Paired with Yumeko as her 'twin,' the curtain opens on Mary's gambling mania!"/>
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/assets/img/cover-twin.jpg" />
   <meta property="og:image:width" content="482" />
